Aligned watchlist-button with correct color

--- a/app/assets/stylesheets/movie.scss
+++ b/app/assets/stylesheets/movie.scss
@@ -8,9 +8,9 @@
   font-size: 150%;
 }
 
-.add-button{
+.add-remove-button{
   top: -33px;
-  left: 400px;
+  left: 80%;
   font-size: 200% !important;
 }
 
